fix: tab misalignment (#2713)

--- a/src/plugins/blur-nav-bar/style.css
+++ b/src/plugins/blur-nav-bar/style.css
@@ -5,7 +5,6 @@
 }
 
 ytmusic-tabs {
-  top: calc(var(--ytmusic-nav-bar-height) + var(--menu-bar-height, 36px));
   backdrop-filter: blur(8px) !important;
 }
 
